--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ python-dotenv==1.0.0
 Pillow==10.1.0
 reportlab==4.0.8
 PyPDF2==3.0.1
-weasyprint==60.2 
+weasyprint==60.2
+Flask-Mail==0.9.1
+APScheduler==3.10.4 
