Add Persistent Disk support and photo migration tools
- Implement Persistent Disk auto-detection in app/__init__.py
- Update build.sh for Persistent Disk setup and validation
- Add comprehensive setup guides (RENDER_SETUP_GUIDE.md, RENDER_FILE_UPLOAD_GUIDE.md)
- Create photo migration tools for existing data (177 photos, 336MB)
- Split large files for GitHub compatibility (90MB chunks)
- Add merge and extraction scripts for Render deployment
- Update .gitignore for temporary migration files

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,6 @@ $RECYCLE.BIN/
 htmlcov/
 .tox/
 .pytest_cache/ 
+# Photo migration files (temporary)
+photo_migration/*.zip
+photo_migration/*.part*
